# cleansh

./: .cleansh_license_checked  .gitignore  CHANGELOG.md  CLEANISH_SCOPE.md  CLEANSH_SCOPE.md  COMMANDS.md  CONTRIBUTING  Cargo.toml  Cleansh.toml  Dist.toml  LICENSE  LICENSE.md  LICENSE_NOTES.md  README  README.md  SECURITY.md  cleansh_scope.md  dist-manifest.toml  dist-workspace.toml  netlify.toml  project.md  test_results.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  release.yml  rust.yml
cleansh/: .env.example  ARCHIVE-CHANGELOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  Dist.toml  LICENSE.md  LICENSE_NOTES.md  README.md  SECURITY.md  TRADEMARK.md  build.rs  custom_theme_example.yaml  dist-workspace.toml  netlify.toml
cleansh-core/: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md
cleansh-core/config/: default_rules.yaml
cleansh-core/src/: audit_log.rs  config.rs  engine.rs  errors.rs  headless.rs  lib.rs  profiles.rs  redaction_match.rs  sanitizer.rs  validators.rs
cleansh-core/src/engines/: mod.rs  regex_engine.rs
cleansh-core/src/sanitizers/: compiler.rs  mod.rs  regex_sanitizer.rs
cleansh-core/tests/: config_integration_tests.rs  profile_tests.rs
cleansh/.github/workflows/: rust.yml
cleansh/src/: cli.rs  lib.rs  main.rs
cleansh/src/commands/: cleansh.rs  mod.rs  stats.rs  sync.rs  uninstall.rs  verify.rs
cleansh/src/ui/: diff_viewer.rs  mod.rs  output_format.rs  redaction_summary.rs  sync_ui.rs  theme.rs  verify_ui.rs
cleansh/src/utils/: app_state.rs  clipboard.rs  license.rs  mod.rs  platform.rs
cleansh/tests/: cleansh_integration_tests.rs  cli_integration_tests.rs  full_stats_tests.rs  integration_line_buffered.rs  platform_test.rs  sanitize_shell_integration_tests.rs  stats_tests.rs  sync_integration_test.rs  uninstall_command_tests.rs  verify_integration_test.rs
cleansh/website/: index.html  package-lock.json  package.json  privacy.html  styles.css  tailwind.config.js
cleansh/website/src/: custom.css
cleansh/wix/: main.wxs
config/: default_rules.yaml
src/: config.rs  lib.rs  logger.rs  main.rs
src/commands/: cleansh.rs  mod.rs  stats.rs  uninstall.rs
src/tools/: mod.rs  sanitize_shell.rs  satitize_shell.rs  validators.rs
src/ui/: diff_viewer.rs  mod.rs  output_format.rs  redaction_summary.rs  theme.rs
src/utils/: app_state.rs  mod.rs  redaction.rs
tests/: cleansh_integration.rs  cleansh_integration_tests.rs  cli_integration_tests.rs  config_integration_tests.rs  full_stats_tests.rs  integration_line_buffered.rs  sanitize_shell_integration_tests.rs
website/: index.html  privacy.html
website/src/: custom.css  input.css
wix/: main.wxs
