[package]
name = "cleansh"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/KarmaYama/cleansh"
homepage = "https://github.com/KarmaYama/cleansh"
authors = ["Cleansh Technologies LLC"]
readme = "README.md"
crates.io = "https://crates.io/crates/cleansh" 
rust-version = "1.88.0"
categories = ["command-line-utilities"]
keywords = ["cli", "security", "redact", "sanitize", "clipboard"]
description = "Sanitize your terminal output. One tool. One purpose."

[package.metadata.wix]
upgrade-guid = "F47C98E6-B908-4CB3-A38B-0EFD5F3DE62D"
path-guid = "DB8DAC94-9423-4D0E-A466-24166013B8BB"
license = false
eula = false

[dependencies]
# CLI Argument Parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration Management
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Core Sanitization Logic
regex = "1.10"
strip-ansi-escapes = "0.2.1"

# Clipboard Interaction
arboard = "3.4.0" 

# Logging
log = "0.4"
env_logger = "0.11"

# Error Handling
anyhow = "1.0"
thiserror = "2.0.12"

# UI / Output Layer (for beautiful, structured, color-coded output)
owo-colors = "4.2.2"
comfy-table = "7.0"
diffy = "0.4.2"
dissimilar = "1.0.8"

# For file system operations and temporary files in tests (if not already listed in dev-dependencies)
# If walkdir is used, it should be here too.
dirs = "6.0.0" 
once_cell = "1.19" 

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10" 

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


