# cleansh-workspace/Cargo.toml
[workspace]
members = [
    "cleansh-core",
    "cleansh",
    # Future crates to be added later:
    # "cleansh-memory",
    # "cleansh-interactive-ui",
    # "cleansh-v1-app",
]
resolver = "2" # Use the new Cargo feature resolver for consistency

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
lto = "thin"