#cleansh-workspace/cleansh-core/#Cargo.toml
[package]
name = "cleansh-core"
version = "0.1.2"
edition = "2021"
authors = ["Obscura Tech"]
license-file = "LICENSE.md"
description = "Core library for CleanSH, providing essential data sanitization rules, compilation, and application logic independent of the CLI."
repository = "https://github.com/KarmaYama/cleansh"
homepage = "https://cleansh.netlify.app/"
keywords = ["sanitization", "redaction", "data-security", "privacy", "core-logic"]
categories = ["data-structures", "parsing", "text-processing"]

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ok", version = "0.9.36" }
regex = "1.10"
lazy_static = "1.4"
strip-ansi-escapes = "0.2.1"
cleansh_entropy = { path = "C:/Users/alexm/cleansh_plugins" }

[dev-dependencies]
test-log = "0.2.14" 
tempfile = "3.10" 