# cleansh-workspace/cleansh/#Cargo.toml

[package]
name = "cleansh"
version = "0.1.7"
edition = "2024"
license-file = "LICENSE.md"
repository = "https://github.com/KarmaYama/cleansh"
homepage = "https://cleansh.netlify.app/"
authors = ["Cleansh Technologies"]
readme = "README.md"
rust-version = "1.88.0"
categories = ["command-line-utilities"]
keywords = ["cli", "security", "redact", "sanitize", "clipboard"]
description = "Sanitize your terminal output. One tool. One purpose."

[package.metadata.wix]
upgrade-guid = "F47C98E6-B908-4CB3-A38B-0EFD5F3DE62D"
path-guid = "DB8DAC94-9423-4D0E-A466-24166013B8BB"
license = false
eula = false

[dependencies]
cleansh-core = { path = "../cleansh-core", version = "0.1.0" }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ok", version = "0.9.36" }
serde_json = "1.0" # Kept as it was
arboard = { version = "3.4.0", optional = true }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0.12"
owo-colors = "4.2.2"
comfy-table = "7.0"
diffy = "0.4.2"
dissimilar = "1.0.8"
dirs = "6.0.0"
once_cell = "1.19"
chrono = "0.4.41"
is-terminal = "0.4" 
strip-ansi-escapes = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
test-log = "0.2.18"
gag = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[features]
default = []
test-exposed = []
clipboard = ["arboard"]

[lib]
name = "cleansh"
path = "src/lib.rs"

[[bin]]
name = "cleansh"
path = "src/main.rs"